--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,8 @@ requires-python = ">=3.12"
 dependencies = [
     "beautifulsoup4>=4.13.4",
     "langchain-community>=0.3.27",
+    "langchain-core>=0.3.67",
+    "langchain-google-genai>=2.1.6",
+    "langchain[core]>=0.3.26",
     "streamlit>=1.46.0",
 ]
