--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,5 +10,6 @@ dependencies = [
     "langchain-core>=0.3.67",
     "langchain-google-genai>=2.1.6",
     "langchain[core]>=0.3.26",
+    "pdflatex>=0.1.3",
     "streamlit>=1.46.0",
 ]
