--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,5 +11,6 @@ dependencies = [
     "langchain-google-genai>=2.1.6",
     "langchain[core]>=0.3.26",
     "pdflatex>=0.1.3",
+    "pymupdf4llm>=0.0.27",
     "streamlit>=1.46.0",
 ]
