--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,5 +12,5 @@ dependencies = [
     "langchain[core]>=0.3.26",
     "pdflatex>=0.1.3",
     "pymupdf4llm>=0.0.27",
-    "streamlit>=1.46.0",
+    "streamlit[pdf]>=1.46.0",
 ]
